--- a/src/app/main/for-life/for-life.component.html
+++ b/src/app/main/for-life/for-life.component.html
@@ -1,14 +1,9 @@
-<!-- <div class="container navigation">
-  <div class="row justify-content-center">
-    <h2 class="col-3">ForLife</h2>
-  </div>
-</div> -->
 <div class="welcome">
   <h1>Welcome to ForLife, where our goal is to keep everything as natural as nature itself!</h1>
 </div>
 <div class="container main">
   <div class="row justify-content-center">
-    <button class="col-4 btn products" [routerLink]="['/kefir']">
+    <button class="btn products" [routerLink]="['/kefir']">
       <h3>MILK KEFIR</h3>
       <div>
         <img src="../../../assets/kefir.jpg" alt="kefir">
