--- a/src/app/main/for-life/kefir/kefir.component.html
+++ b/src/app/main/for-life/kefir/kefir.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="row">
-    <div class="col-5 definition">
+    <div class="definition">
       <h1>What is Kefir?</h1>
       <p>
         Kefir is a fermented milk drink originating more than a thousand years ago. Fermentation is an ancient method of preservation,
         used by many cultures all over the world.
       </p>
     </div>
-    <div class="col-5 benefits">
+    <div class="benefits">
       <h1>The Benefits Of Kefir</h1>
       <ul>
         <li>Healthier Immune System</li>
@@ -19,7 +19,7 @@
         <li>increases bone density</li>
       </ul>
     </div>
-    <div class="col-5 benefits">
+    <div class="benefits">
       <h1>Nutritional Contents</h1>
       <ul>
         <li>Vitamins A, B3, B6, C, D, E, K2</li>
@@ -32,7 +32,7 @@
         <li>Zinc</li>
       </ul>
     </div>
-    <div class="col-5 benefits">
+    <div class="benefits">
       <h1>BUY NOW!</h1>
       <h4>500ml: R25, Bulk(10+) R20</h4>
       <h4>2l: R90 Bulk(10+) R80</h4>
