--- a/src/app/main/for-life/kefir/kefir.component.scss
+++ b/src/app/main/for-life/kefir/kefir.component.scss
@@ -1,12 +1,16 @@
 .definition{
     margin: 2.5%;
+    padding: 2.5%;
     background-color: rgba(55, 130, 175, 0.4);
     color: #00cbff;
     border-radius: 30px;
 }
 .benefits{
     margin: 2.5%;
+    padding: 2.5%;
     background-color: rgba(55, 130, 175, 0.4);
     color: #00cbff;
     border-radius: 30px;
+}
+@media screen and (max-width: 600px){
 }
