--- a/src/app/main/home/benefits/benefits.component.html
+++ b/src/app/main/home/benefits/benefits.component.html
@@ -1,29 +1,29 @@
 <div class="container navigation">
   <div class="row justify-content-center">
-    <button class="btn col-2" [routerLink]="['/home']">KINESIOLOGISTS</button>
-    <button class="btn col-2" [routerLink]="['/definition']">DEFINITION</button>
-    <button class="btn col-2" [routerLink]="['/benefits']">BENEFITS</button>
-    <button class="btn col-2" [routerLink]="['/therapies']">THERAPIES</button>
+    <button class="btn" [routerLink]="['/home']">KINESIOLOGISTS</button>
+    <button class="btn" [routerLink]="['/definition']">DEFINITION</button>
+    <button class="btn" [routerLink]="['/benefits']">BENEFITS</button>
+    <button class="btn" [routerLink]="['/therapies']">THERAPIES</button>
   </div>
 </div>
 <div class="container benefits">
   <h1>BENEFITS!</h1>
-  <div class="row justify-content-center">
-    <ul class="col-4">
+  <div class="row">
+    <ul class="">
       <li>Enhance learning</li>
       <li>Assist in personal perfomance</li>
       <li>Brain Integration</li>
       <li>Eliminate stress</li>
-      <li>Reduce and Eliminate Emotional Physical and Mental Stress (change current wording)</li>
-    </ul>
-    <ul class="col-4">
+      <li>Reduce and Eliminate Emotional Physical and Mental Stress</li>
+    <!-- </ul>
+    <ul class=""> -->
       <li>Help overcome past trauma</li>
       <li>identify nutritional deficiency</li>
       <li>help overcome fears and phobias</li>
       <li>Aid in injury healing</li>
       <li>Emotional and trauma stress release</li>
-    </ul>
-    <ul class="col-4">
+    <!-- </ul>
+    <ul class=""> -->
       <li>Brain integration</li>
       <li>Boost Sport perfomance</li>
       <li>Help with finance decision making</li>
