--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="container navigation">
   <div class="row justify-content-center">
-    <button class="btn col-2" [routerLink]="['/home']">KINESIOLOGISTS</button>
-    <button class="btn col-2" [routerLink]="['/definition']">DEFINITION</button>
-    <button class="btn col-2" [routerLink]="['/benefits']">BENEFITS</button>
-    <button class="btn col-2" [routerLink]="['/therapies']">THERAPIES</button>
+    <button class="btn" [routerLink]="['/home']">KINESIOLOGISTS</button>
+    <button class="btn" [routerLink]="['/definition']">DEFINITION</button>
+    <button class="btn" [routerLink]="['/benefits']">BENEFITS</button>
+    <button class="btn" [routerLink]="['/therapies']">THERAPIES</button>
   </div>
 </div>
 <!-- <div [@routerTransition]="getState(o)"> -->
@@ -13,8 +13,3 @@
 <div class="kinesiologists">
   <app-kinisiologists></app-kinisiologists>
 </div>
-<!--MOBILE-->
-<!--<div class="definitionMobile">
-  <h4>Kinesiology is a communication tool that enables a person to assess and upgrade their perfomance in all areas of their life.
-      It is the science of energy balancing and is grounded in the study of anatomy and physiology.</h4>
-</div>-->
