--- a/src/app/main/home/home.component.scss
+++ b/src/app/main/home/home.component.scss
@@ -4,6 +4,7 @@
   max-width: 100%;        
   .btn{
     margin: 1%;
+    width: 15%;
     border-radius: 25px;
     background-color: rgba(0, 8, 62, 0.5);
     color: #00cbff;
@@ -13,19 +14,10 @@
   margin-top: 2.5%;  
 }
 @media screen and (max-width: 600px){
-  .definition{
-    display: none;
-  }
-  .benefits{
-    display: none;
-  }
-  .definitionMobile{
-    display: block;
-    margin-top: 2.5%;
-    height: 30vh;
-    border-radius: 30px;
-    background-color: rgba(0, 8, 62, 0.5);
-    text-align: center;
-    color: greenyellow;
+  .navigation{   
+    .btn{      
+      width: auto;
+      font-size: 10px;
+    }    
   }
 }
