--- a/src/app/main/home/types/lymphatic/lymphatic.component.html
+++ b/src/app/main/home/types/lymphatic/lymphatic.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mainContainer">
   <div class="">
     <h1>LYMPHATIC DRAINAGE MASSAGE</h1>
     <p>
@@ -6,7 +6,7 @@
       to the the matter dealt with in the session
     </p>
     <div class="row">
-      <div class="col-4">
+      <div class="rowContainer">
         <h5>Main actions of Lymphatic drainage protocol</h5>
         <ul>
           <li>Stimulating Body Fluid Circulation</li>
@@ -14,7 +14,7 @@
           <li>Stimulating the nervoud System</li>
         </ul>
       </div>
-      <div class="col-8">
+      <div class="rowContainer">
         <h5>Benefits: </h5>
         <div class="row">
           <ul>
