--- a/src/app/main/kinisiologists/babsie/babsie.component.html
+++ b/src/app/main/kinisiologists/babsie/babsie.component.html
@@ -1,10 +1,10 @@
 <div class="container main">
   <h1>BABSIE NOTHNAGEL</h1>
   <div class="row">
-    <div class="col-4">
+    <div class="profileImage">
       <img src="./../../assets/babsie.jpg" class="imageContainer">
     </div>
-    <div class="summary col-8">
+    <div class="summary">
       <h1>ABOUT ME</h1>
       I love life and the fact that life is to be loved. Given the oppurtunity, the body is created to exist perfectly and in harmony
       with nature. This can be accomplished by maintaining a balanced life, mentally, spiritually, physically and emotionally.
@@ -14,8 +14,8 @@
       body with the living organisms from the food it needs. This lifestyle enables the body to perform at its maximum potential
     </div>
   </div>
-  <div class="row justify-content-center">
-    <div class="contact col-5">
+  <div class="row">
+    <div class="contact ">
       <h2>CONTACT ME</h2>
       <h4>Email address:
         <a href="mailto:babsie.nothnagel@kinesiologypractice.co.za?cc=admin@kinesiologypractice.co.za">
@@ -31,7 +31,7 @@
         </a>
       </h4>
     </div>
-    <div class="capable col-6">
+    <div class="capable">
       <h1 style="text-align: center">THERAPY SESSIONS</h1>
       <ul>
         <li>GENERAL KINESIOLOGY</li>
@@ -44,8 +44,7 @@
         <li>PELVIC GIRDLE ALIGNMENT</li>
         <li>ANIMAL SESSIONS</li>
         <li>ADRENAL FATIGUE</li>
-      </ul>
-      <button class="btn typesBtn" [routerLink]="['/home', {outlets: {'info': ['types']}}]">Please click here to go to the different types</button>
+      </ul>      
     </div>
   </div>
 </div>
