--- a/src/app/main/kinisiologists/melina/melina.component.html
+++ b/src/app/main/kinisiologists/melina/melina.component.html
@@ -1,10 +1,10 @@
 <div class="container main">
   <h1>MELINA GEERTSEMA</h1>
   <div class="row">
-    <div class="col-4">
+    <div class="profileImage">
       <img src="./../../assets/milena2.jpg" class="imageContainer">
     </div>
-    <div class="summary col-8">
+    <div class="summary">
       <h1>ABOUT ME</h1>
       Melina has always had a passion for assisting in the physical and emotional healing of mankind. The wellbeing of the human
       body and spirit is of paramount importance to Melina. Her journey with kinesiology, brought about the realisation that
@@ -17,8 +17,8 @@
       life, at home, in the workplace and, on the sports fields.”
     </div>
   </div>
-  <div class="row justify-content-center">
-    <div class="contact col-5">
+  <div class="row">
+    <div class="contact">
       <h2>CONTACT ME</h2>
       <h4>Email address:
         <a href="mailto:melina.geertsema@kinesiologypractice.co.za?cc=admin@kinesiologypractice.co.za">
@@ -42,7 +42,7 @@
         </a>
       </h4>
     </div>
-    <div class="prices col-6">
+    <div class="capable">
       <h1 style="text-align: center">THERAPY SESSIONS</h1>
       <ul>
         <li>GENERAL KINESIOLOGY</li>
