--- a/src/app/main/prices/prices.component.html
+++ b/src/app/main/prices/prices.component.html
@@ -4,10 +4,10 @@
   <br>
   <h5>PLEASE FOLLOW THE TABLE IN ORDER TO GET THE CORRECT PRICE ACCORDING TO YOUR SESSION</h5>
   <div align="left">
-    <input type="text" class="col-3" id="priceInput" (keyup)="priceSearch()" placeholder="Therapy Search" title="Therapy Search">
+    <input type="text" class="" id="priceInput" (keyup)="priceSearch()" placeholder="Therapy Search" title="Therapy Search">
   </div>
   <div class="row">
-    <div class="col-12">
+    <div class="therapyTable">
       <table class="table table-bordered" id="priceTable">
         <tr>
           <th>Therapy</th>
