--- a/src/app/main/home/definition/definition.component.html
+++ b/src/app/main/home/definition/definition.component.html
@@ -1,29 +1,29 @@
 <div class="container navigation">
   <div class="row justify-content-center">
-    <button class="btn col-2" [routerLink]="['/home']">KINESIOLOGISTS</button>
-    <button class="btn col-2" [routerLink]="['/definition']">DEFINITION</button>
-    <button class="btn col-2" [routerLink]="['/benefits']">BENEFITS</button>
-    <button class="btn col-2" [routerLink]="['/therapies']">THERAPIES</button>
+    <button class="btn " [routerLink]="['/home']">KINESIOLOGISTS</button>
+    <button class="btn " [routerLink]="['/definition']">DEFINITION</button>
+    <button class="btn " [routerLink]="['/benefits']">BENEFITS</button>
+    <button class="btn " [routerLink]="['/therapies']">THERAPIES</button>
   </div>
 </div>
 <div class="container">
   <div class="row justify-content-center">
-    <h1 class="whatIs col-9">KINESIOLOGY?</h1>
+    <h1 class="whatIs">KINESIOLOGY?</h1>
   </div>
   <div class="row justify-content-center">
-    <div class="whatIs col-3">
+    <div class="whatIs">
       <P>
         Kinesiology works with muscles, the body, and its own energy. It helps resolve all kinds of problems in life, unwellness,
         stress and relieves pain. It works well with goal setting and future issues which may arise.
       </P>
     </div>
-    <div class="whatIs col-3">
+    <div class="whatIs">
       <P>
         Kinesiology is a communication tool that enables a person to assess and upgrade their perfomance in all areas of their life,
         It is the science of energy balancing and is grounded in the study of anatomy and physiology.
       </P>
     </div>
-    <div class="whatIs col-3">
+    <div class="whatIs">
       <P>
         Muscle testing is a profound method that allows the Kinesiologist to “talk to your body”. Physical issues, such as pain,
         muscle or other structural impairment as a result of surgery, injury or traumatic experiences are dealt with on a
