--- a/src/app/main/home/types/lymphatic/lymphatic.component.scss
+++ b/src/app/main/home/types/lymphatic/lymphatic.component.scss
@@ -1,6 +1,11 @@
-.container{
+.mainContainer{
     background-color: rgba(55, 130, 175, 0.6);
     border-radius: 30px;
     color: #00cbff;
-    padding: 1%
+    padding: 1%;
+    .rowContainer{
+        margin: 0 5%;
+    }
+}
+@media screen and (max-width: 600px){
 }
