--- a/src/app/main/kinisiologists/kinisiologists.component.html
+++ b/src/app/main/kinisiologists/kinisiologists.component.html
@@ -1,20 +1,20 @@
 <div class="container">
   <h1>THERAPISTS</h1>
   <div class="row justify-content-center">
-    <div class="card col-4">
+    <div class="card">
       <button type="button" class="btn" [routerLink]="['/babsie']">
-        <img src="./../../assets/babsie.jpg">
         <h2><b>Babsie Nothnagel</b></h2>
+        <img src="./../../assets/babsie.jpg">
         <p>Benoni AH</p>        
       </button>
     </div>
     <div class="info col-2">
       <!-- //>information about us</p> -->
     </div>
-    <div class="card col-4" id="milena" [routerLink]="['/melina']">
+    <div class="card" id="milena" [routerLink]="['/melina']">
       <button type="button" class="btn">
-        <img src="./../../assets/milena2.jpg">
         <h2><b>Melina Geertsema</b></h2>
+        <img src="./../../assets/milena2.jpg">
         <p>Elardus Park</p>        
       </button>
     </div>
