--- a/src/app/main/kinisiologists/kinisiologists.component.scss
+++ b/src/app/main/kinisiologists/kinisiologists.component.scss
@@ -19,16 +19,19 @@
   box-shadow: 0 12px 20px 0 rgb(174, 174, 174);
   transform: scale(1.05);
 }
-.modal{
-  background-color: rgba(0,0,0,0.4);
-  .modal-dialog{
-    max-width: 75%;
-    .modal-content{    
-      background-color: rgba(55, 130, 175, 0.5);  
-    }
-  }
-}
 .info{
   margin: 0;
   padding-top: 25%;
+}
+@media screen and (max-width: 600px){
+  .card{
+    margin: 0 12.5%;    
+    width: 75%;
+    h2{
+      font-size: 25px;
+    }    
+  }
+  img{
+    width: 75%;    
+  }
 }
