added joinus mobility

--- a/src/app/main/join-us/join-us.component.html
+++ b/src/app/main/join-us/join-us.component.html
@@ -1,27 +1,29 @@
 <div class="container">
   <div>
-    <h1>Do you want to join our family of KINESIOLOGISTS?</h1>
+    <h1>JOIN OUR FAMILY OF KINESIOLOGISTS</h1>
   </div>
-  <div class="row justify-content-center">
-    <div class="info col-6">
+  <div class="row infoContainer">
+    <div class="info">
       <h4>Please send the Following information to:
         <a href="mailto:admin@kinesiologypractice.co.za">admin@kinesiologypractice.co.za</a>
       </h4>
       <ul>
         <li>Name & Surname</li>
         <li>A closeup photo of yourself</li>
+        <li>A small summary of yourself</li>
+        <li>Your number/s and if whatsapp is available on that number</li>
         <li>Location</li>
-        <li>What are your kinesiology Capabilities?</li>
+        <li>What Therapies can you do?</li>
       </ul>
     </div>
-    <div class="info col-5">
+    <div class="info">
       <h4>CONTACT <a href="mailto:admin@kinesiologypractice.co.za">admin@kinesiologypractice.co.za</a> in order to find out the cost involved to join our FAMILY.</h4> 
       <br>
       <h5>NO DEPOST & MONEY BACK GUARANTEE</h5>
     </div>
   </div>
-  <div class="row justify-content-center">
-    <div class="info">
+  <div class="row">
+    <div class="safe">
       <h6>ALL INFORMATION SENT WILL BE PRIVATE AND DISCARDED ON REQUEST AT ANY TIME</h6>
     </div>
   </div>
