--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   <a routerLink="/prices">Fees</a>
   <a routerLink="/ForLife">ForLife</a>
   <a routerLink="/joinUs">JoinUs</a>  
-  <a routerLink="/feedback">Feedback</a>  
+  <!-- <a routerLink="/feedback">Feedback</a>   -->
 </div>
 
 <div id="main">
