updated Melina address

--- a/src/app/main/home/types/kinesiology/kinesiology.component.html
+++ b/src/app/main/home/types/kinesiology/kinesiology.component.html
@@ -3,7 +3,7 @@
     <h1>KINESIOLOGY</h1>
       <p>
           A kinesiology session addresses stressors and imbalances within the body, on a physical, mental, emotional and spiritual
-          level, pertaining to the mater dealt with in the session.
+          level, pertaining to the matter dealt with in the session.
         </p>
         <p>
           Most health related issues, including heart disease, digestive problems, allergies, brain function, digestive disorders,
