--- a/src/app/main/kinisiologists/melina/melina.component.html
+++ b/src/app/main/kinisiologists/melina/melina.component.html
@@ -35,9 +35,9 @@
           <h5>264 9th Road Breddel AH</h5>
           <h6>Tuesdays & Thursdays</h6>
         </a>
-        <a href="https://www.google.co.za/maps/place/616A+Magnetiet+St,+Elarduspark,+Pretoria,+0047/data=!4m2!3m1!1s0x1e95671aa71a591b:0x4c1440f1a77b0e5c?sa=X&ved=0ahUKEwjootKT0c3YAhXiDsAKHblbAHkQ8gEIKDAA"
+        <a href="https://www.google.co.za/maps/place/656+Sonja+St,+Moreletapark,+Pretoria,+0044/@-25.820363,28.2853623,17z/data=!3m1!4b1!4m5!3m4!1s0x1e956742cda9a583:0xc906bf73dc357d21!8m2!3d-25.820363!4d28.287551"
           target="_blank">
-          <h5>616A Magnetiet Street Elardus Park Pretoria</h5>
+          <h5>656 Sonja Street Moreleta Park Pretoria</h5>
           <h6>Tuesdays - Fridays</h6>
         </a>
       </h4>
